--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,7 @@
                 <input type="email" id="email" name="email"><br><br>
 
                 <label for="inquiry">INQUIRY:</label><br>
-                <textarea id="inquiry" name="inquiry" placeholder="Please write your question here">
-                </textarea><br><br>
+                <textarea id="inquiry" name="inquiry" placeholder="Please write your question here"></textarea><br><br>
 
                 <input type="submit" value="SUBMIT">
             </form>
