--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         </header>
 
         <div id="contactContainer">
-            <form id="contactForm">
+            <form id="contactForm" action="" method="post" enctype="text/plain">
                 <label for="firstName">FIRST NAME:</label><br>
                 <input type="text" id="firstName" name="firstName"><br><br>
 
